--- a/1.0.ProcesoImpresion3D.md
+++ b/1.0.ProcesoImpresion3D.md
@@ -34,5 +34,5 @@ El proceso básico de impresión tiene los siguientes paso:
     1. Si queremos que se creen estructura de **soporte**
     1. Si necesitamos estructuras para mejorar la **adherencia**
 
-    ![](./images/Soporte.webp)
+    ![](./images/Soporte.jpg)
     
