--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -1,12 +1,13 @@
 ## Componentes de las impresoras 3D
 
-
+En este módulo vamos a ver los diferentes componentes de las impresoras 3D. Muchos de ellos son módulos genéricos que podemos encontrar en otros equipos. Al hablar de algunos de ellos usaremos su nombre en inglés para facilitar la búsqueda de información en internet si fuera necesario.
 
 ## Extrusor + fusor (HotEnd)
 
 Una de las partes fundamentales de toda impresora es el conjunto extrusor + fusor (HotEnd).  En muchas ocasiones, por abuso del lenguaje, se llama extrusor al conjunto de los dos componentes,  pero hablando con propiedad debemos distinguirlos puesto que tienen roles muy distintos:
-*  el extrusor es la parte mecánica  que mueve el filamento y que alimenta al otro componente
-*  el fusor donde el plástico se funde y desde el que se deposita en la base
+
+* El extrusor es la parte mecánica  que mueve el filamento y que alimenta al otro componente
+* El fusor donde el plástico se funde y desde el que se deposita en la base
 
 El funcionamiento de una extrusor es muy sencillo conceptualmente: se trata simplemente de un motor que es capaz de mover el filamento de una forma precisa al mismo tiempo que lo funde para conseguir que se aporte una cantidad exacta de material.
 
@@ -39,7 +40,7 @@ Encima de la base se suele colocar una superficie  bien para mejorar la adherenc
 
 * Un cristal con recubrimiento adherente
 
-![Crista con recubrimiento](./images/crystal3d.jpg)
+![Cristal con recubrimiento](./images/crystal3d.jpg)
 
 Los cristales/espejos se suelen fijar con clips a la base.
 
@@ -59,31 +60,40 @@ Es fácil de entender si tenemos en cuenta que estos componentes  necesitan mane
 
 Un elemento muy crítico también de estas placas eran los conectores de los cables. Una mala conexión con un plástico de mala calidad puede dar lugar a un sobrecalentamiento, a una pequeña chispa que se van produciendo, pudiendo desencadenar el que el plástico se derrita, llegando incluso a que la impresora arda. Son bastante conocidos los casos de impresoras que acaban ardiendo por una mala conexión de los cables.
 
-A estas placas teníamos que añadir los drivers de los motores paso a paso, que se suelen incluir en unos módulos independientes que posibilitaban el que los cambiemos en caso de que se estropearan.
+A estas placas teníamos que añadir los controladores (drivers) de los motores paso a paso, que suelen ser módulos independientes para así poder cambiarlos en caso de que se estropeen.
 
-
-![Driver](./images/driver.jpg)
+![Driver de motores](./images/driver.jpg)
 
 Este componentes se calienta, con lo que normalmente incluyen un disipador.
 
 También suelen incluir un potenciómetro para ajustar la cantidad de potencia que transmite al motor.
 
-De la calidad de los driver depende que el movimiento de nuestra impresora sea más suave o que haga más o menos ruido.
+Existen diferentes marcas y versiones, unos consiguen un movimiento de los motores más silencioso que otros. De la calidad de los driver depende que el movimiento de nuestra impresora sea más suave o que haga más o menos ruido.
 
 A esta placa también se conectan los diferentes sensores que miden la temperatura en la base y en el fusor y los finales de carrera para posicionar con precisión el extrusor.
 
-Un esquema típico de conexión sería el siguiente:
+Un esquema típico de conexión de una placa Ramps sería el siguiente:
 
 ![Esquema de conexión de una impresora con RAMPs](./images/EsquemaImpresora3D.png)
 
+Otros componentes fundamentales en las impresoras 3D son aquellas que nos permiten controlarla:  la pantalla de visualización y los controles del usuario. 
+
+Inicialmente las pantallas eran de texto (lcd) y los controles solían ser unos botones o bien un mando giratorio que nos permitía movernos entre las diferentes opciones del menú.
+
+![Pantalla de caracteres LCD y control rotatorio](./images/lcd.png)
+
+A día de hoy casi todas las impresoras disponen de controladores de pantalla gráfica en color muchas de ellas táctiles
+
+![Pántalla gráfica táctil](./images/CE-RoHS-3D-Printer-splash-screen-MKS-TFT32-touch-screen-smart-controller-display-3-2inch.jpg)
 
 #### Electrónica 32 bits
 
-A día de hoy la mayoría de la impresora utilizan una placa de control de 32 bits con una potencia de sobra para manejar la impresora, consiguiente un movimiento mucho mas suave y silencioso de los motores.
+A día de hoy la mayoría de la impresora utilizan una placa de control de 32 bits con una potencia de sobra para manejar la impresora, consiguiendo un movimiento mucho más suave y silencioso de los motores.
+
+
+![Placa de 32 bits](./images/Electronica32bits.png)
 
 Hoy en día existen diferentes tipos de placas cada vez más potentes que además de controlar la impresora no permiten manejar la de una forma mucho más sencilla integrando pantalla de visualización gráfica a color incluso conexiones remotas como puede ser con Wi-Fi.
-
-La mayoría de las impresoras utilizan una placa de control de 32 bits con una potencia de sobra para manejar la impresora, consiguiente un movimiento mucho mas suave y silencioso de los motores.
 
 
 ### Fuente de alimentación
@@ -92,9 +102,13 @@ La fuente de alimentación es un elemento fundamental de la impresora puesto que
 
 Suelen estar sobredimensionadas, para garantizar potencia de sobra.
 
+La mayoría de las imprsoras actuales incluyen una fuente estándar, como la de la imagen de una impresora Kingroon KP3s de 24V y 15A (360W)
+
+![Fuente de alimentación de una impresora Kingroon KP3s](./images/fuenteAlimentacion.jpg)
+
 ### Motores
 
-En el 99.99 % de las impresoras se utilizan motores paso a paso para conseguir la precisión necesaria y casi siempre del formato Nema17:
+En el 99.99 % de las impresoras se utilizan motores paso a paso para conseguir la precisión necesaria y casi siempre del formato Nema 17:
 
 ![Motor paso a paso Nema17](./images/nema17.jpg)
 
@@ -133,7 +147,7 @@ En la siguiente imagen se puede ver los diferentes ventiladores de un extrusor:
 
 Algunos de estos ventiladores están funcionando todo el tiempo y son los responsables de la mayor parte del ruido, otros como el ventilador de capa se encienden sólo cuando es necesario.
 
-Algunas impresoras son especialmente ruidosa y podemos mejorar reducir el volumen de su ruido cambiando por unos ventiladores más silenciosos, eso sí, seguro que son más caros que los originales.
+Algunas impresoras son especialmente ruidosas y podemos mejorar reducir el volumen de su ruido cambiando por unos ventiladores más silenciosos, eso sí, seguro que son más caros que los originales.
 
 
 ### Impresoras más complejas
@@ -142,6 +156,6 @@ A medida que se hace más complejo el equipamiento de la impresora, se necesitan
 
 También algunas de las impresoras incluyen sistemas para cambio de filamento es decir son capaces de utilizar distintos filamentos de forma alternativa para ello es necesario conocer con precisión todos estos componentes y cuando el filamento está listo para imprimir.
 
-![Componente multimaterial](./images/redesigned_body.jpg)
+![Componente multi-material](./images/redesigned_body.jpg)
 
 
