--- a/4.0.2.TiposExtrusores.md
+++ b/4.0.2.TiposExtrusores.md
@@ -38,16 +38,16 @@ Como hemos visto son complejos y necesitan de bastantes piezas impresas y otros 
 
 ![](./images/Reprap-prusa-I3-Mendel-3D-impresora-de-Wade-de-Greg-engranaje-directo-set-kit-extrusora.jpg_Q90.jpg_piezas.jpg)
 
-La gran ventaja es que tenemos disponibles distintos modelos como [éste](https://www.thingiverse.com/thing:961630) y [este](https://www.thingiverse.com/thing:362217) que podemos descargar  para reparar o adaptar.
+La gran ventaja es que tenemos disponibles distintos modelos como [este](https://www.thingiverse.com/thing:961630) y [este](https://www.thingiverse.com/thing:362217) que podemos descargar  para reparar o adaptar.
 
 Todos tienen en común el que utilizan unos muelles para  conseguir una buena tracción del filamento.  habitualmente es necesario ajustar la tensión de estos muelles para evitar un exceso de presión o una falta de  agarre.
 
-![Muelles del extrusor](./images/muellesExtrusorjpeg)
+![Muelles del extrusor](./images/muellesExtrusor.jpeg)
 
 
 ## Estructura del fusor
 
-El fusor es un componentes fundamental y vamos a estudiarlo con detalle.    
+El fusor es un componente fundamental y vamos a estudiarlo con detalle.    
 
 ![Partes del fusor y las diferentes temperaturas de cada una](./images/imagen_hotend.jpg)
 
@@ -55,13 +55,13 @@ La parte más sencilla es la **boquilla**  (A) y tiene un pequeño orificio por 
 
 La parte central del fusor está formada por una cilindro largo que tiene que tener al mismo tiempo una temperatura alta por un extremo, que dónde se producirá propiamente la fundición del plástico y por el otro extremo debe tener la temperatura lo más baja posible, para conseguir que el filamento se deslice y no pegue. De ahí que en esta parte se suele incluir unos elementos disipadores y un ventilador para que la temperatura sea baja en la zona adecuada.
 
-La **cabeza calefactora** (B) suele ser un bloque metálico en el que tenemos por un lado un **elemento calefactor** que suele ser una resistencia cerámica y que es la responsable de alcanzar la temperatura alta necesaria para fundir el filamento y un **sensor de temperatura** que suele ser una resistencia PTC que mide la temperatura con precisión con el fin de ajustar el proceso de control de la temperatura de función del filamento.
+La **cabeza calefactora** (B) suele ser un bloque metálico en el que tenemos por un lado un **elemento calefactor** que suele ser una resistencia cerámica y que es la responsable de alcanzar la temperatura alta necesaria para fundir el filamento y un **sensor de temperatura** que suele ser una resistencia PTC que mide la temperatura con precisión con el fin de ajustar el proceso de control de la temperatura de fusión del filamento.
 
 Dentro de este cilindro o **barrel** se suele incluir un tubo de un material conocido como PTFE que tiene una un gran coeficiente de deslizamiento y que permite que el filamento se deslice con facilidad. Este elemento, conocido también como teflón, nos permite que el filamento se mueva con facilidad y al mismo tiempo no se adhiera en el caso de que esté fundido.
 
 También se considera un elemento fungible y que tenemos que  reemplazar cada cierto número de horas de impresión.
 
-Los fusores suelen incluir en la parte de fuera del disipador un ventilador que contribuye a que la temperatura del esta parte del extrusor sea lo más baja posible.
+Los fusores suelen incluir sobre el disipador un ventilador que contribuye a que la temperatura del esta parte del extrusor sea lo más baja posible.
 
 Algo habitual es utilizar boquillas de diferente diámetro, dependiendo de si queremos extruir mucho plástico o queremos más precisión y un mayor detalle:
 
@@ -71,13 +71,13 @@ La diferencia en cuanto a tiempo de impresión y a calidad entre diferentes boqu
 
 ![Comparación 0.4 vs 0.8mm](./images/XYZ-Cube-0.4mm-and-0.8mm-Nozzle-and-Their-Settings-Results.jpg)
 
-Aunque la estructura del fusor de la impresora está preparado para que podamos cambiar de boquilla con relativa facilidad, es un proceso en el que tenemos que ser muy cuidadosos y no está recomendado si no tenemos cierta experiencia, porque de no hacerlo bien y no ajustarla adecuadamente  podemos dar lugar a atascos.
+Aunque la estructura del fusor de la impresora está preparada para que podamos cambiar de boquilla con relativa facilidad, es un proceso en el que tenemos que ser muy cuidadosos y no está recomendado si no tenemos cierta experiencia, porque de no hacerlo bien y no ajustarla adecuadamente  podemos dar lugar a atascos.
 
 Veamos algunos tipos de extrusores habituales hoy en día:
 
 * Extrusor MK8 directo + fusor: suele utilizarse en muchas impresoras actuales
 
-![](./images/extrusor-mk8-de-impresora-3d-04mm-175mm-con-motor-extrusor-y-hotend.jpg)
+![Extrusor MK8+fusor](./images/extrusor-mk8-de-impresora-3d-04mm-175mm-con-motor-extrusor-y-hotend.jpg)
 
 * Extrusor Titan + fusor E3D: se trata del conjunto más utilizado de mayor calidad a día de hoy, con una excelentes prestaciones
 
@@ -88,24 +88,24 @@ Podemos ver las diferentes partes del fusor en este esquema
 ![Extrusor E3D v6.1](./images/v-6-175-500-x-500.png)
 
 
-* Extrusor Unibody Bq, muy unitilizado y compacto, aunaue con el problema de que tiene un elevado coste
+* Extrusor Unibody Bq, muy utilizado y compacto, aunque con el problema de que tiene un elevado coste
 
-![Exturosr Unidoby de Bq](./images/extrusorBQ.png)
+![Extrusor Unibody de Bq](./images/extrusorBQ.png)
 
 
 ## Impresoras que no utilizan filamento
 
-Existen algunos extrusores que no usan filamento y que pueden trabajar directamente con el plástico en un formato que se suele conocer como *pelets*, que son pequeñas bolitas de plástico con el que se pueden trabajar perfectamente. 
+Existen algunos extrusores que no usan filamento y que pueden trabajar directamente con el plástico en un formato que se suele conocer como *pellets*, que son pequeñas bolitas de plástico con el que se pueden trabajar perfectamente. 
 
 Estos extrusores son algo más complejos ya que suelen incluir una especie de depósito o tolva que van extrayendo la cantidad adecuada de este plástico al mismo tiempo que lo van rompiendo, comprimiendo y fundiendo.
 
-![Extrusor con la tolva de pelets](./images/extrusorPelets.jpg)
+![Extrusor con la tolva de pellets](./images/extrusorPelets.jpg)
 
-![Extrusor de pelets montado en la impresora](./images/universal_pellet_extruder_3d_druck_3d_printing1.jpg)
+![Extrusor de pellets montado en la impresora](./images/universal_pellet_extruder_3d_druck_3d_printing1.jpg)
 
 
 Para ello utilizan una broca especial conectada al motor del extrusor que va moviendo el plástico a la velocidad adecuada hacia la zona del fusor:
 
-![Broca de pelets](./images/broca.jpg)
+![Broca de pellets](./images/broca.jpg)
 
-
+También podemos citar en este punto a impresoras que no utilizan plástico, pero sí una tecnología similar como pueden ser las impresoras de chocolate...
