--- a/4.0.3.Kits.md
+++ b/4.0.3.Kits.md
@@ -17,11 +17,12 @@ También existen impresoras que utilizan una estructura completamente metálica,
 
 Si incluimos todos los componentes de la electrónica, los del extrusor...
 
-![Piezas de la electronica y estructura](./images/pack-vitaminas-completo-prusa-i3.jpg)
+![Piezas de la electrónica y estructura](./images/pack-vitaminas-completo-prusa-i3.jpg)
 
-Y si ahora juntamos toooodas las piezas...
+Y si ahora juntamos todas las piezas...
 
 ![Componentes de un kit de impresora Prusa I3](./images/img_3948.jpg)
 
 
-A día de hoy las impresoras en kits suelen tener muchas menos piezas, y la mayoría de las comerciales vienen semimontadas.
+No te asustes, a día de hoy las impresoras en kits suelen tener muchas menos piezas, y la mayoría de las comerciales vienen semimontadas al 80-90%.
+
