--- a/4.1.0.Geometrias.md
+++ b/4.1.0.Geometrias.md
@@ -2,7 +2,7 @@
 
 Vamos a ver ahora algunas geometrías distintas de impresoras.
 
-### Cartesainas
+### Cartesianas
 
 La típica estructura x y z llamada **cartesianas** por motivo obvio. Cumple el cometido de calidad y de velocidad perfectamente, al mismo tiempo que ganamos una gran sencillez en el montaje uso y mantenimiento si encontramos un error obviamente sé es fácil de encontrar en qué parte de la impresora está el problema
 
@@ -11,9 +11,9 @@ La típica estructura x y z llamada **cartesianas** por motivo obvio. Cumple el 
 
 ### Core XY
 
-Otra típica arquitectura es la llamada **Core xy** que se refiere a un sistema de movimiento simétrico en los ejes que proporciona una mayor velocidad y una mayor estabilidad. El costo es una mayor complejidad en la calibración y en el montaje lo que hace que la mayoría de estas impresoras están reservadas para un usuario más especializado:
+Otra típica arquitectura es la llamada **Core XY** que se refiere a un sistema de movimiento simétrico en los ejes que proporciona una mayor velocidad y una mayor estabilidad. El costo es una mayor complejidad en la calibración y en el montaje lo que hace que la mayoría de estas impresoras están reservadas para un usuario más especializado:
 
-![corexy](./images/smartrapcore-02.jpg)
+![Impresora de formato Core XY](./images/smartrapcore-02.jpg)
 
 
 
@@ -37,40 +37,51 @@ El movimiento del extrusor se consigue mediante movimientos paralelos de 3 patin
 
 ![Comparación delta vs cartesiana](./images/3ddelta.jpg)
 
-Estas impresoras consiguen una gran velocidad de impresión, pero el proceso de calibrado es bastante más complejo que lass cartesianas.
+Estas impresoras consiguen una gran velocidad de impresión, pero el proceso de calibrado es bastante más complejo que las cartesianas.
 
 ## Impresoras colgantes
 
-Impresora bueno ahora concuerda aquellas que no tienen una estructura sino que colocamos los elementos necesarios para los desplazamientos en el emplazamiento de la impresora es decir podemos utilizar la misma estructura las mismas paredes de la casa donde está de la habitación donde está incluida la impresora para fijar las distintas poleas componentes y motores y a partir de ahí con un sistema de cuerda conseguimos movimiento del extrusor que está suspendido de estas cuerdas
+HangPrinter o impresora colgante: se trata de una impresora sin estructura, que está suspendida con unas cuerdas que están fijadas en el exterior, como por ejemplo en las paredes y techo de la habitación. La  impresora, que no es más que el extrusor suspendido y un conjunto de poleas y motores que enrollan o liberan cuerda, se va moviendo para depositar el material fundido:
+
+![HangPrinter](./images/Hangprinter_3D_printer.jpg)
+
+La impresora colgada y fijada a distintos puntos.
+
+![HangPrinter colgada](./images/hanging-printer.jpg)
+
+El calibrado se consigue ajustandos las distancias de las cuerdas.
+
+El límite para el tamaño de las piezas a imprimir es el espacio dónde hayas colgado la impresora ¡y la cantidad de filamento de que dispongas!, como puedes ver en esta torre de 4m de alta:
+
+
+![Torre de 4m impresa con Hangprinter](./images/Hangprinter_4_meter_tower.jpg) 
 
 ### Impresoras de caja cerrada
 
-Las impresoras cerradas tienen la ventaja de que por un lado conseguimos una mayor seguridad dado que no se puede acceder a los componentes que están a alta temperatura y por otro lado conseguimos también una mayor estabilidad de la temperatura puesto que todos los clientes se puede mantener la temperatura más alta consiguiendo de esta forma evitar que el filamento filamento se produzcan separaciones y fisuras entre capas.
+Las impresoras de caja cerrada tienen varias ventajas:
 
+* Por un lado conseguimos una mayor seguridad dado que no se puede acceder a los componentes que están a alta temperatura
+* Por otro lado conseguimos también una mayor estabilidad de la temperatura consiguiendo de esta forma evitar que el filamento no se produzcan separaciones y fisuras entre capas.
+
+![Impresora cerrada de MakerBot](./images/3d-yazıcı.jpg)
 
 ## Brazos robótico que imprimen
 
+Últimamente estamos viendo la aparición de impresoras que no somos otra cosa que un brazo robótico al que se le coloca una herramienta en el extremo que es un fusor u otro dispositivo que deposita algún material (hormigón, chocolate,...) 
 
-Últimamente estamos viendo la aparición de impresoras que no somos otra cosa que un brazo robótico al que se le coloca una herramienta que es un fusor en el extremo de esta forma aprovechamos y la precisión y la velocidad de movimiento del brazo robótico para conseguir una impresora 3D no es propiamente una impresora 3D en el sentido de que una herramienta mucho más general pero que se puede la que se pueden conseguir muy buenos resultado
+De esta forma aprovechamos la precisión y la velocidad de movimiento del brazo robótico para conseguir una impresora 3D que puede conseguir muy buenos resultados:
 
-![10](./images/scara.jpg)
+![Esquema de impresora sobre un brazo robot de tipo Scara](./images/scara.jpg)
 
-**Ejemplo con Hormigón**
+Otro ejemplo cada vez más habitual es utilizar impresoras 3D en el mundo de la construcción:
 
+![Impresora de hormigón para imprimir casas](./images/construir-una-vivienda-de-70-metros-con-una-impresora-3d.jpg)
 
-### Modelos comerciales
+Ya se pueden encontrar comercialmente estos equipos:
 
-* Makerbot
- ![makerbot](http://store.makerbot.com/mb-images/store/global/international.jpg)
+![Brazo robot para imprimir en hormigón](./images/impresora-3d-hormigon.jpg)
 
-* ultimaker
+También podemos encontrar impresoras que imprimen alimentos, como por ejemplo esta impresora de chocolate
 
-![ultimaker](https://i.ytimg.com/vi/Sz77Tq9xzpM/maxresdefault.jpg)
-
-* bq: witbox
-![witbox](http://www.imprimalia3d.com/sites/default/files/Witbox_3D-printer-yellow-iGo3D.jpg)
-
-### Kits
-
-![kit](http://www.moebyus.com/images/stories/virtuemart/product/img_3948.jpg)
+![Impresora de chocolate](./images/chocolatePrinter.jpg)
 
