--- a/4.1.3.Prusa_i3.md
+++ b/4.1.3.Prusa_i3.md
@@ -1,10 +1,9 @@
-## Impresora Prusa i3
-
 # Impresora Prusa i3
 
 (Modelo Psyque de Createc 3D)
 
+Se trata de una variante de la clásica impresora Prusa i3 a la que se le ha sustituido la estructura de varillas por un conjunto de elementos metálicos consiguiendo así una gran rigidez que nos permite alcanzar grandes velocidades.
+
 ![Prusa i3](./images/i3-createc3D.jpg)
 
-Vamos a ver los procesos más usuales que solemos hacer con nuestra impresora Prusa i3
 
