--- a/4.1.6.ArtilleryGenius.md
+++ b/4.1.6.ArtilleryGenius.md
@@ -4,40 +4,40 @@
 
 Se trata de una impresora robusta (y por tanto pesada) y del típico formato cartesiano. Según el fabricante es ultrasilenciosa.
 
-En la documentación aparece que el tamaño máximo de impresión es 220x220x250 mm, ocupando un espacio de 430x390 m.
+En la documentación aparece que el tamaño máximo de impresión es 220x220x250 mm, ocupando un espacio de 430x390 mm.
 
-Como vemos el rollo de filamento se coloca encima de la impresora. Cuenta con un sensor de filamento, junto al rollo, que detiene la impresión si el filamento se acaba o rompe.
+El rollo de filamento se coloca encima de la impresora. Cuenta con un sensor de filamento, junto al rollo, que detiene la impresión si el filamento se acaba o rompe.
 
-![](./images/artillery_genius_8a.jpg)
+![Sensor de filamento](./images/artillery_genius_8a.jpg)
 
 
 La impresora tiene un muy buen acabado y muy robusto lo que nos va a permitir alcanzar una buena velocidad de impresión:
 
 ![](./images/artillery_genius_2.jpg)
-![](./images/artillery_genius_2b.jpg)
+![Tamaño](./images/artillery_genius_2b.jpg)
 
 Estas son las características según la documentación del fabricante:
 
-![](./images/artillery_genius_3n.jpg)
+![Características técnicas](./images/artillery_genius_3n.jpg)
 
 
 La impresora tiene unas muy buenas características:
 
 ![](./images/artillery_genius_3.jpg)
-![](./images/artillery_genius_4.jpg)
+![Componentes](./images/artillery_genius_4.jpg)
 
 Según el fabricante viene montada en un 95% lo que hace muy rápido el ensamblado. Tiene un buen sistema de integración de cables que deja un montaje muy limpio.
 
 Para acceder a los ficheros gcode podemos utilizar una tarjeta SD o un pendrive USB.    
 
-Usa un extrusor director Titan Extruder, sin duda una garantía de calidad.
+Usa un extrusor directo Titan Extruder, sin duda una garantía de calidad.
 
 ![](./images/artillery_genius_8.jpg)
-![](./images/artillery_genius_9.jpg)
+![Extrusor](./images/artillery_genius_9.jpg)
 
 Dispone de una base de material cerámico con aparentemente muy buena adherencia:
 
-![](./images/artillery_genius_9b.jpg)
+![Base](./images/artillery_genius_9b.jpg)
 
 
 
