--- a/4.1.6.Witbox2.md
+++ b/4.1.6.Witbox2.md
@@ -2,34 +2,25 @@
 
 ## Características
 
+![Impresora WitBox](./images/witbox.jpg)
 
-X: 295mm/ Y220mm/ Z200mm
+Dimensiones de impresión: X: 295mm/ Y220mm/ Z200mm
 
-Cama fría
+Cama fría, es decir no podemos calentar la base.
 
-Tornillos para liberar el metacrilato de arriba
+Podemos abrir la carcasa con unos tornillos para liberar el metacrilato de arriba.
 
-Extrusor de doble engranaje (muy adecuado para flexible) (no es bowden)
+Usa un extrusor de doble engranaje (muy adecuado para flexible) (no es bowden)
 
-Sensor capacitivo para autonivelado
+Incluye un sensor capacitivo para autonivelado
 
 La cama se puede retirar  y está fijada por imanes
 
 Extrusor unibody con tornillo para ajustar la presión del filamento en el extrusor (necesario ajustar para el flexible)
 
-Placa de electrónica propia
+Utiliza una placa de electrónica propia
 
 Tarjeta junto a la pantalla
 
 [Perfil witbox 2 para cura](https://github.com/bq/printing-profiles/archive/BQ_Witbox_2.zip) ([Soporte Bq](https://www.bq.com/es/support/witbox-2/support-sheet))
-
-
-## Manejo
-
-4 x Patitas de goma
-
-Quitar protector con 2 tornillos de la parte de atras para inmobilizar el extrusor
-
-Nivelar (seleccionar la opcion)
-
 
