--- a/4.1.7.Impresoras3D_variantes.md
+++ b/4.1.7.Impresoras3D_variantes.md
@@ -2,7 +2,7 @@
 
 [Otra comparativa](http://buenosybaratos.es/electronica/impresora-3d/las-mejores-impresoras-3d/)
 
-![1](./images/3d-yazıcı.jpg)
+
 
 ![2](./images/29012014VFSrKJjktqqcorAS.jpg)
 
@@ -19,5 +19,22 @@
 ![8](./images/i2.jpg)
 
 ![9](./images/replicator-cheap-3d-printer-design1.jpg)
+
+
+### Modelos comerciales
+
+* Makerbot
+ ![makerbot](http://store.makerbot.com/mb-images/store/global/international.jpg)
+
+* ultimaker
+
+![ultimaker](https://i.ytimg.com/vi/Sz77Tq9xzpM/maxresdefault.jpg)
+
+* bq: witbox
+![witbox](http://www.imprimalia3d.com/sites/default/files/Witbox_3D-printer-yellow-iGo3D.jpg)
+
+### Kits
+
+![kit](http://www.moebyus.com/images/stories/virtuemart/product/img_3948.jpg)
 
 
