--- a/4.2.Montaje.Kingroon_KP3s.md
+++ b/4.2.Montaje.Kingroon_KP3s.md
@@ -1,9 +1,9 @@
 ## Montaje KingRoon KP3s
 
 
-El montaje de la impresora quien room kp13 es muy sencillo:
+El montaje de la impresora KingRoon KP3s es muy sencillo:
 
-![Montaje 1](./images/KP3s_montaje0_s.jpg)
+![Piezas principales](./images/KP3s_montaje0_s.jpg)
 
 El cableado viene completamente hecho, además de excelentemente protegido
 
@@ -12,26 +12,25 @@ El cableado viene completamente hecho, además de excelentemente protegido
 
 Lo único que tenemos que hacer es conectar el eje z colocarlo en el hueco que viene dispuesto para ello.
 
-![Montaje 1](./images/KP3s_montaje0_2_s.jpg)
+![Hueco del Eje Z](./images/KP3s_montaje0_2_s.jpg)
 
-![Montaje ](./images/KP3s_montaje1_s.jpg)
+![Eje Z ya colocado ](./images/KP3s_montaje1_s.jpg)
 
-Fijarlo con unos tornillos por la parte de abajo 
+Lo fijamos con unos tornillos por la parte de abajo 
 
-![Montaje ](./images/KP3s_montaje2_s.jpg)
+![Tornillos de la parte inferior](./images/KP3s_montaje2_s.jpg)
 
-Colocamos el adaptar del motor y el husillo, atornillando la parte más estrecha del lado del motor
+Colocamos el adaptador/acople del motor y el husillo, atornillando la parte más estrecha del lado del motor
 
-![Montaje ](./images/KP3s_montaje3_s.jpg)
+![Adaptador entre el eje y el husillo ](./images/KP3s_montaje3_s.jpg)
 
-Colocamos el usillo pasándolo por la rosca brazo X
+Colocamos el husillo pasándolo por la rosca del eje X
 
-
-![Montaje ](./images/KP3s_montaje4_s.jpg)
+![Husillo en la rosca del eje X ](./images/KP3s_montaje4_s.jpg)
 
 Y atornillamos el adaptador
 
-![Montaje ](./images/KP3s_montaje5_s.jpg)
+![Apretamos los tornillos para fijar el adaptador/acople ](./images/KP3s_montaje5_s.jpg)
 
 
 Y una vez que lo hemos terminado de colocar calibrar la impresora se puede realizar todo el trabajo en menos de 10 minutos
