--- a/4.2.Montaje_Ender3.md
+++ b/4.2.Montaje_Ender3.md
@@ -1,8 +1,12 @@
-## Montaje de una impresora 3D
+## Montaje de una impresora Creality Ender 3 V2
+
+
 
 ![Creality Ender 3 v2](./images/CrealityEnder3_v2.jpg)
 
 Vamos a realizar el montaje de una impresora modelo Creality Ender 3 v2
+
+Hemos preparado unos vídeos con el proceso de montaje:
 
 1. Contenido del paquete
 
@@ -38,6 +42,7 @@ Mientras montamos la impresora la estructura debemos de dejar los tornillos un p
 
 8. Montaje del tubo de filamento y 9. conexión de la toda la electrónica
 
-[![Vídeo: 8. Montaje del tupo de filamento y 9. conexión de la toda la electrónica](https://img.youtube.com/vi/isPwK-X9OUI/0.jpg)](https://youtu.be/isPwK-X9OUI)
+[![Vídeo: 8. Montaje del tubo de filamento y 9. conexión de la toda la electrónica](https://img.youtube.com/vi/isPwK-X9OUI/0.jpg)](https://youtu.be/isPwK-X9OUI)
 
-[Vídeo: 8. Montaje del tupo de filamento y 9. conexión de la toda la electrónica](https://youtu.be/isPwK-X9OUI)
+[Vídeo: 8. Montaje del tubo de filamento y 9. conexión de la toda la electrónica](https://youtu.be/isPwK-X9OUI)
+
