--- a/4.1.1.EjeZ.infinito.md
+++ b/4.1.1.EjeZ.infinito.md
@@ -1,6 +1,6 @@
 ## Impresoras de Eje Z "infinito"
 
-Ya hay en el mercado algunos modelos de impresoras 3D con lo que han llamado eje z "infinito", eso quiere decir que usando una geometría diferente y deslizando la pieza a medida que se imprime se pueden conseguir impresiones de un tamaño mucho mayor al de la estructura de la impresora o bien imprimir muchas piezas en serie.
+Están apareciendo en el mercado algunos modelos de impresoras 3D con lo que han llamado eje z "infinito", eso quiere decir que usando una geometría diferente y deslizando la pieza a medida que se imprime se pueden conseguir impresiones de un tamaño mucho mayor al de la estructura de la impresora o bien imprimir muchas piezas en serie.
 
 Vamos a ver un ejemplo con la impresora [Creality Cr-30 3DPrintMill](https://www.creality3dofficial.com/es/products/cr-30-infinite-z-belt-3d-printer):
 
@@ -31,7 +31,7 @@ No he tenido la suerte de probarla pero muchos makers que sí lo han hecho han q
 
 Ya han aparecido varios tutoriales en los que nos explican como hacer estas transformación, como [este instructable](https://www.instructables.com/EnderLoop/) en el que se explica cómo hacer la transformación:
 
-![](https://content.instructables.com/ORIG/F4P/9W31/KNQ1EGK8/F4P9W31KNQ1EGK8.jpg?auto=webp&frame=1&width=800&height=1024&fit=bounds&md=d0375e167c1fc5d469caf8b17478bb04)
+![](./images/F4P9W31KNQ1EGK8.jpg)
 
 * Imprimiendo [nuevas piezas](https://www.thingiverse.com/thing:4658201)
 * Modificando la geometría
