--- a/4.1.5.Kingroon_KP3s.md
+++ b/4.1.5.Kingroon_KP3s.md
@@ -1,33 +1,26 @@
 ## Impresora: Kingroon KP3s
 
-[Tienda KingRoom](https://es.aliexpress.com/store/1905393)
-
-[KingRoom KP3S](https://es.aliexpress.com/item/4001279175159.html?spm=a2g0o.store_home.singleImageText_6000324340063.0)
-
-Es una impresora ideal cuando tienes pocos espacio y la superficie de impresión es de 180 x 180mm. El único pero es que el ventilador del extrusor es muy ruidoso
+La impresora Kingroon KP3s es una impresora ideal cuando tienes poco espacio. A pesar de ello sigue teniendo una superficie de impresión de 180 x 180mm. El único pero es que el ventilador del extrusor es muy ruidoso.
 
 ![Ocupa poco espacio](./images/KP3s_PocoEspacio_s.jpg)
 
 Me gusta mucho la calidad de la impresora KingRoon KP3s  porque viene perfectamente cableada, los cables están muy bien protegidos y además incluye una cinta que nos permiten hacer que el tubito para el filamento se adapte perfectamente a la posición de nuestro rollo de filamento.
 
-El diseño es bastante elegante y robusto
+El diseño es bastante elegante y robusto con un eje Z que utiliza un perfil de aluminio de 40x20mm.
 
 ![Finales de carrera](./images/KP3s_FinalesCarrera_s.jpg)
 
-Tiene una estructura muy sólida basada en T-slot e incluye guías lineales
+Tiene una estructura muy sólida basada en T-slot e incluye guías lineales, que le dan un movimiento muy suave.
 
 ![Guía Lineal eje Y](./images/KP3s_GuiaLineaY_s.jpg)
-![Guía Lineal eje Y](./images/KP3s_GuiaLinealX_s.jpg)
+
+![Guía Lineal eje X](./images/KP3s_GuiaLinealX_s.jpg)
 
 También incluye repuestos, unos metros de filamento y todas las herramientas necesarias para el montaje y uso.
 
-![](./images/KP3s_repuestos_s.jpg)
-![](./images/KP3s_Herramientas_s.jpg)
+![Repuestos](./images/KP3s_repuestos_s.jpg)
 
-![](./images/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_640x640.jpg)
-
-![](./images/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_Q90.jpg_.webp)
-
+![Herramientas](./images/KP3s_Herramientas_s.jpg)
 
 ![Contenido de la caja](./images/KP3s_Contenido_s.jpg)
 
@@ -40,8 +33,4 @@ Tiene un extrusor directo que viene completamente montado
 
 ![Extrusor](./images/KP3s_Extrusor_s.jpg)
 
-
-## Referencias
-
-[Review detallada](https://3dprintbeginner.com/kingroon-kp3s-review/)
 
