--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -62,7 +62,7 @@ Un elemento muy crítico también de estas placas eran los conectores de los cab
 
 A estas placas teníamos que añadir los controladores (drivers) de los motores paso a paso, que suelen ser módulos independientes para así poder cambiarlos en caso de que se estropeen.
 
-![Driver de motores](./images/driver.jpg)
+![Controlador/Driver de motores](./images/driver.jpg)
 
 Este componentes se calienta, con lo que normalmente incluyen un disipador.
 
@@ -98,13 +98,14 @@ Hoy en día existen diferentes tipos de placas cada vez más potentes que ademá
 
 ### Fuente de alimentación
 
+![Fuente de alimentación de una impresora Kingroon KP3s](./images/fuenteAlimentacion.jpg)
+
 La fuente de alimentación es un elemento fundamental de la impresora puesto que tiene que ser capaz de proporcionar una alimentación lo más estabilizada posible a todo el sistema.
 
 Suelen estar sobredimensionadas, para garantizar potencia de sobra.
 
-La mayoría de las imprsoras actuales incluyen una fuente estándar, como la de la imagen de una impresora Kingroon KP3s de 24V y 15A (360W)
+La mayoría de las impresoras actuales incluyen una fuente estándar, como la de la imagen de una impresora Kingroon KP3s de 24V y 15A (360W)
 
-![Fuente de alimentación de una impresora Kingroon KP3s](./images/fuenteAlimentacion.jpg)
 
 ### Motores
 
