--- a/4.0.2.TiposExtrusores.md
+++ b/4.0.2.TiposExtrusores.md
@@ -69,7 +69,7 @@ Algo habitual es utilizar boquillas de diferente diámetro, dependiendo de si qu
 
 La diferencia en cuanto a tiempo de impresión y a calidad entre diferentes boquillas es enorme:
 
-![Comparación 0.4 vs 0.8mm](./images/XYZ-Cube-0.4mm-and-0.8mm-Nozzle-and-Their-Settings-Results.jpg)
+![Comparación 0.4 y 0.8mm](./images/XYZ-Cube-0.4mm-and-0.8mm-Nozzle-and-Their-Settings-Results.jpg)
 
 Aunque la estructura del fusor de la impresora está preparada para que podamos cambiar de boquilla con relativa facilidad, es un proceso en el que tenemos que ser muy cuidadosos y no está recomendado si no tenemos cierta experiencia, porque de no hacerlo bien y no ajustarla adecuadamente  podemos dar lugar a atascos.
 
