--- a/4.1.0.Geometrias.md
+++ b/4.1.0.Geometrias.md
@@ -49,7 +49,7 @@ La impresora colgada y fijada a distintos puntos.
 
 ![HangPrinter colgada](./images/hanging-printer.jpg)
 
-El calibrado se consigue ajustandos las distancias de las cuerdas.
+El calibrado se consigue ajustando las distancias de las cuerdas.
 
 El límite para el tamaño de las piezas a imprimir es el espacio dónde hayas colgado la impresora ¡y la cantidad de filamento de que dispongas!, como puedes ver en esta torre de 4m de alta:
 
