--- a/4.1.2.Modelos.md
+++ b/4.1.2.Modelos.md
@@ -1,7 +1,3 @@
 # Modelos de impresoras 3D
 
-Prusa
-
-Creality
-
-Kingroon
+Vamos a ver ahora algunos modelos de impresoras 3D, viendo sus características principales.
