--- a/PublicacionBase/4.Ejercicio.md
+++ b/PublicacionBase/4.Ejercicio.md
@@ -2,6 +2,7 @@
 
 ## Ejercicios
 
-Aprender a montar una impresora 3D
+A esta altura supongo que ya tendrás tu impresora 3D, si es así, redacta un breve documento explicando sus características técnicas: tipo de extrusor, características de la fuente de alimentación, dimensiones de la base, ...
+Si aún no la tienes, piensa en las características que te gustaría que tuviera y prepara un breve documento con ellas.
 
 Escribe tu explicación en un documento aparte y envíalo al profesor
